added more styles

--- a/index.html
+++ b/index.html
@@ -6,27 +6,33 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+	<link rel="shortcut icon" href=https://img.icons8.com/dusk/64/000000/pen.png type="image/png">
 	<title>Blog</title>
 </head>
 <body>
 	<nav>
 		<ul>
 			<li>
-				Home
+				<a href="#">Home</a>
 			</li>
 			<li>
-				Feed
+				<a href="#feed">Feed</a>
 			</li>
 			<li>
-				Publishes
+				<a href="#publishes">Publishes</a>
 			</li>
 			<li>
-				About
+				<a href="#about">About</a>
 			</li>
 			<li>
-				Contact
+				<a href="#contact">Contact</a>
 			</li>
 		</ul>
 	</nav>
+	<section class="main">
+		<h1 class="page-header">
+			Welcome! <br> See content that you chose to follow.
+		</h1>
+	</section>
 </body>
 </html>
