added cool animations

--- a/index.html
+++ b/index.html
@@ -30,8 +30,14 @@
 		</ul>
 	</nav>
 	<section class="main">
-		<h1 class="page-header">
-			Welcome! <br> See content that you chose to follow.
+		<h1 class="page-header animate-header-1">
+			Welcome!
+		</h1>
+		<h1 class="page-header animate-header-2">
+			See content that you chose to follow.
+		</h1>
+		<h1 class="page-header animate-header-3">
+			This is another header.
 		</h1>
 	</section>
 </body>
