minimal margin fix

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 			Welcome!
 		</h1>
 		<h1 class="page-header animate-header-2">
-			See content that you chose to follow.
+			See content that you only chose to follow.
 		</h1>
 		<h1 class="page-header animate-header-3">
-			This is another header.
+			Scroll down to explore.
 		</h1>
 	</section>
 </body>
